# Cpp-tasks

./: README.md
Excersise1/: CMakeLists.txt  temperaturesFile.cpp  temperaturesInput.cpp
Exercise1/: CMakeLists.txt  temperaturesFile.cpp
Exercise10/: CMakeLists.txt  main.cpp
Exercise2/: CMakeLists.txt  Task1.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Exercise3/: CMakeLists.txt  Circle.cpp  Task1.cpp  task4.cpp
Exercise3/task3/: CMakeLists.txt  commodity.cpp  commodity.hpp
Exercise4/: CMakeLists.txt  task1.cpp  task2.cpp
Exercise5/: CMakeLists.txt  main.cpp
Exercise6/: CMakeLists.txt  task1.cpp  task2.cpp
Exercise7/: main.cpp
Exercise7/Fraction/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp
Exercise7/Set/: CMakeLists.txt  Set.cpp  Set.hpp  main.cpp
Exercise8/: CMakeLists.txt  main.cpp
Exercise8/Pair/: CMakeLists.txt  Pair.cpp  Pair.hpp  main.cpp
Exercise9/: CMakeLists.txt  main.cpp
